--- a/.github/workflows/build-gluon.yml
+++ b/.github/workflows/build-gluon.yml
@@ -1,14 +1,8 @@
-
-# Update this file after adding/removing/renaming a target by running
-# `make list-targets BROKEN=1 | ./contrib/actions/generate-actions.py > ./.github/workflows/build-gluon.yml`
-
 name: Build Gluon
 on:
   push:
     branches:
-      - master
-      - next
-      - v20*
+      - main
     paths:
       - "modules"
       - "Makefile"
