--- a/.github/workflows/build-gluon.yml
+++ b/.github/workflows/build-gluon.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [ x86-64, ramips-mt76x8 ]
+        target: [ x86-64, ramips-mt76x8, ramips-mt7620, ath79-generic ]
     runs-on: ubuntu-18.04
     steps:
       - name: Checkout repository and submodules
