--- a/.github/workflows/build-gluon.yml
+++ b/.github/workflows/build-gluon.yml
@@ -19,7 +19,7 @@ jobs:
           submodules: recursive
       - name: Install Dependencies
         run: sudo ci/install-dependencies.sh
-      - name: Update gluon-site supmodule
+      - name: Update gluon-site
         run: ci/update-site.sh
       - name: Build
         run: ci/run-build.sh ${{ matrix.target }}
