--- a/.github/workflows/build-sign.yml
+++ b/.github/workflows/build-sign.yml
@@ -1,4 +1,4 @@
-name: Build Gluon
+name: Sign Gluon
 on:
   push:
     branches:
@@ -15,6 +15,8 @@ jobs:
         run: sudo ci/install-dependencies.sh
       - name: Update gluon-site
         run: ci/update-site.sh
+        env:
+          SECRETKEY: ${{ secrets.SECRETKEY }}
       - name: Sign
         run: ci/run-sign.sh
       - name: Archive build output
